fix: delete backup
